--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ table {
 }
 
 td {
-  text-align: center;
+  text-align: left;
 }
 
 tbody td:not(td:first-of-type):hover {
@@ -32,22 +32,24 @@ tbody tr:nth-child(even) {
   background: #f4eafd;
 }
 
-.New {
-  /* border: 1px solid gold;
+/* .New {
+  border: 1px solid gold;
   margin: auto;
-  width: 95%; */
-}
+  width: 95%;
+} */
 
 .New form {
   margin: auto;
-  width: 95%;
+  width: 40%;
+ 
 }
 
 input[type],
 textarea {
   display: block;
-  width: 90%;
+  width: 60%;
   margin: auto;
+  height:80%;
 }
 
 input[type="checkbox"] {
@@ -56,7 +58,7 @@ input[type="checkbox"] {
 }
 
 input[type="submit"] {
-  width: 30%;
+  width: 20%;
 }
 
 .showNavigation {
@@ -64,3 +66,11 @@ input[type="submit"] {
   justify-content: space-around;
   width: 50%;
 }
+
+textarea {
+  height: 100px;
+
+}
+/* form{
+  text-align: justify;
+} */
